Добавлено боковое меню

--- a/index.html
+++ b/index.html
@@ -20,12 +20,68 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=PT+Sans&family=Poppins:wght@700&display=swap"
         rel="stylesheet">
+    <!-- Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant&family=Inter:wght@100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
         <div class="wrapper">
+            <section class="header">
+                <div class="header-menu">
+                    <ul class="header-menu-list">
+                        <li class="header-menu-list__item-logo">
+                            <span class="logo">LOGO</span>
+                        </li>
+                        <li class="header-menu-list__burger">
+                            <img src="./img/svg/icons/burger.svg" alt="Иконка меню">
+                        </li>
+                        <li class="header-menu-list__item-shutter">
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/shutter.svg" alt="Иконка жалюзи">
+                            </a>
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/shutter_line.svg" alt="Иконка жалюзи">
+                            </a>
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/shutter_lab.svg" alt="Иконка жалюзи">
+                            </a>
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/shutter_garm.svg" alt="Иконка жалюзи">
+                            </a>
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/shutter_mouse.svg" alt="Иконка жалюзи">
+                            </a>
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/stall.svg" alt="Иконка жалюзи">
+                            </a>
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/shutter_cirk.svg" alt="Иконка жалюзи">
+                            </a>
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/gear.svg" alt="Иконка жалюзи">
+                            </a>
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/tool.svg" alt="Иконка инструментов">
+                            </a>
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/calk.svg" alt="Иконка калькулятора">
+                            </a>
+                        </li>
+                        <li class="header-menu-list__item-search">
+                            <a href="#" class="header-menu-links">
+                                <img src="./img/svg/icons/search.svg" alt="Иконка поиска">
+                            </a>  
+                        </li>
+                    </ul>
+                </div>
+                <div class="header-slider">
 
+                </div>
+            </section>
         </div>
     </header>
     <main>
