--- a/index.html
+++ b/index.html
@@ -74,12 +74,30 @@
                         <li class="header-menu-list__item-search">
                             <a href="#" class="header-menu-links">
                                 <img src="./img/svg/icons/search.svg" alt="Иконка поиска">
-                            </a>  
+                            </a>
                         </li>
                     </ul>
                 </div>
                 <div class="header-slider">
-
+                    <div class="header-slider-right">
+                        <p class="header-slider-right-descr">Купите <br> <span
+                                class="header-slider-right-descr__span">Что-то</span> <br> и еще <span
+                                class="header-slider-right-descr__span">шторы</span></p>
+                        <p class="header-slider-right-descr-lorem">«Lorem» — производитель изделий для внутренней и
+                            внешней lorem</p>
+                        <button class="header-calk_btn">калькулятор</button>
+                        <div class="header-slider-pages">
+                            <button class="header-slider-pages__btn"></button>
+                            <span class="header-slider-pages-numbers">1/3</span>
+                            <button class="header-slider-pages__btn header-slider-pages__btn_right"></button>
+                        </div>
+                    </div>
+                    <div class="header-slider-left">
+                        <div class="header-slider-left-btns">
+                            <button class="header-slider-left-order-btn">Заказать замер</button>
+                            <button class="header-slider-left-cart-btn"></button>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
