--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop LOGO</title>
-    <!-- Стили -->
-    <link rel="stylesheet" href="/css/style.css">
     <!--Шрифты-->
     <!--Cormorant Infant -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,6 +23,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant&family=Inter:wght@100..900&display=swap"
         rel="stylesheet">
+    <!-- Стили -->
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
                 <div class="header-menu">
                     <ul class="header-menu-list">
                         <li class="header-menu-list__item-logo">
-                            <span class="logo">LOGO</span>
+                            <a href="#" class="logo">LOGO</a>
                         </li>
                         <li class="header-menu-list__burger">
                             <img src="./img/svg/icons/burger.svg" alt="Иконка меню">
@@ -104,7 +104,21 @@
     </header>
     <main>
         <div class="wrapper">
+            <div class="container">
+                <section class="popular-section">
+                    <h2 class="popular-section-title">Популярное</h2>
+                    <div class="popular-section-left">
+                        <div class="popular-section-left-img-blocks">
+                            <div class="popular-section-left-img-blocks__item_one"></div>
+                            <div class="popular-section-left-img-blocks__item_two"></div>
+                            <div class="popular-section-left-img-blocks__item_three"></div>
+                            <div class="popular-section-left-img-blocks__item_four"></div>
+                        </div>
+                    </div>
+                    <div class="popular-section-right"></div>
+                </section>
 
+            </div>
         </div>
     </main>
     <footer>
