--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <main>
         <div class="wrapper">
             <div class="container">
+                 <!-- Секция - Популярное -->
                 <section class="popular-section">
                     <h2 class="popular-section-title">Популярное</h2>
                     <div class="popular-section-left">
@@ -117,7 +118,49 @@
                     </div>
                     <div class="popular-section-right"></div>
                 </section>
-
+                <!-- Секция - Лучшие предложения -->
+                <section class="best-offer-section">
+                    <div class="best-offer-section-header">
+                        <h2 class="best-offer-section-header-title">Лучшие предложения</h2>
+                        <div class="header-slider-pages best-offer-section-slider-pages">
+                            <button class="header-slider-pages__btn"></button>
+                            <span class="header-slider-pages-numbers">1/3</span>
+                            <button class="header-slider-pages__btn header-slider-pages__btn_right"></button>
+                        </div>
+                    </div>
+                    <div class="best-offer-section-products-cards">
+                        <div class="best-offer-section-card">
+                            <div class="best-offer-section-card__img best-offer-section-card__img-one">
+                                <div class="best-offer-section-card__img_up">
+                                    <div class="best-offer-section-card-characteristic">
+                                        <img src="/img/svg/icons/im_cirk.svg" alt="Иконка характеристик">
+                                        <img src="/img/svg/icons/100proc.svg" alt="Иконка характеристик">
+                                        <img src="/img/svg/icons/230.svg" alt="Иконка характеристик">
+                                    </div>
+                                    <div class="best-offer-section-card-sale">-10%</div>
+                                </div>
+                                <div class="best-offer-section-card__img_down">
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_green"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_blue"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_green"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_select"></button>
+                                </div>
+                            </div>
+                            <p class="best-offer-section-card-descr">Вертикальные жалюзи <br>«Lorem»</p>
+                            <div class="best-offer-section-card-price">
+                                <p class="best-offer-section-card-price-new">от <span>1200₽</span></p>
+                                <del class="best-offer-section-card-price-old test">1000₽</del>
+                            </div>
+                            <div class="best-offer-section-card-add">
+                                <button class="best-offer-section-card-add__btn">оформить заявку</button>
+                                <button class="best-offer-section-card-add-cart__btn"></button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
     </main>
