Добавлена карточки товаров в секции - Лучшие предложения

--- a/index.html
+++ b/index.html
@@ -159,7 +159,83 @@
                                 <button class="best-offer-section-card-add-cart__btn"></button>
                             </div>
                         </div>
+                        <div class="best-offer-section-card">
+                            <div class="best-offer-section-card__img best-offer-section-card__img-two">
+                                <div class="best-offer-section-card__img_up">
+                                    <div class="best-offer-section-card-sale">-10%</div>
+                                </div>
+                                <div class="best-offer-section-card__img_down">
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_green"></button>
+                                </div>
+                            </div>
+                            <p class="best-offer-section-card-descr">Вертикальные жалюзи <br> «Lorem». Длинное название в три строчки</p>
+                            <div class="best-offer-section-card-price">
+                                <p class="best-offer-section-card-price-new">от <span>1200₽</span></p>
+                                <del class="best-offer-section-card-price-old test">1000₽</del>
+                            </div>
+                            <div class="best-offer-section-card-add">
+                                <button class="best-offer-section-card-add__btn">оформить заявку</button>
+                                <button class="best-offer-section-card-add-cart__btn"></button>
+                            </div>
+                        </div>
+                        <div class="best-offer-section-card">
+                            <div class="best-offer-section-card__img best-offer-section-card__img-three">
+                                <div class="best-offer-section-card__img_up">
+                                    <div class="best-offer-section-card-characteristic">
+                                        <img src="/img/svg/icons/im_cirk.svg" alt="Иконка характеристик">
+                                        <img src="/img/svg/icons/100proc.svg" alt="Иконка характеристик">
+                                        <img src="/img/svg/icons/230.svg" alt="Иконка характеристик">
+                                    </div>
+                                    <div class="best-offer-section-card-sale">-10%</div>
+                                </div>
+                                <div class="best-offer-section-card__img_down">
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_blue"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_green"></button>
+                                </div>
+                            </div>
+                            <p class="best-offer-section-card-descr">Вертикальные жалюзи <br>«Lorem»</p>
+                            <div class="best-offer-section-card-price">
+                                <p class="best-offer-section-card-price-new">от <span>8000₽</span></p>
+                                <del class="best-offer-section-card-price-old test">10099₽</del>
+                            </div>
+                            <div class="best-offer-section-card-add">
+                                <button class="best-offer-section-card-add__btn">оформить заявку</button>
+                                <button class="best-offer-section-card-add-cart__btn"></button>
+                            </div>
+                        </div>
+                        <div class="best-offer-section-card">
+                            <div class="best-offer-section-card__img best-offer-section-card__img-four">
+                                <div class="best-offer-section-card__img_up">
+                                    <div class="best-offer-section-card-characteristic">
+                                        <img src="/img/svg/icons/im_cirk.svg" alt="Иконка характеристик">
+                                        <img src="/img/svg/icons/100proc.svg" alt="Иконка характеристик">
+                                        <img src="/img/svg/icons/230.svg" alt="Иконка характеристик">
+                                    </div>
+                                    <div class="best-offer-section-card-sale">-10%</div>
+                                </div>
+                                <div class="best-offer-section-card__img_down">
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_blue"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
+                                    <button class="best-offer-section-card__color best-offer-section-card__color_green"></button>
+                                </div>
+                            </div>
+                            <p class="best-offer-section-card-descr">Короткое название</p>
+                            <div class="best-offer-section-card-price">
+                                <p class="best-offer-section-card-price-new">от <span>1200₽</span></p>
+                                <del class="best-offer-section-card-price-old test">1000₽</del>
+                            </div>
+                            <div class="best-offer-section-card-add">
+                                <button class="best-offer-section-card-add__btn">оформить заявку</button>
+                                <button class="best-offer-section-card-add-cart__btn"></button>
+                            </div>
+                        </div>
                     </div>
+                  
                 </section>
             </div>
         </div>
