Внесены корректировки в названия css-файлов

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <button class="header-slider-pages__btn header-slider-pages__btn_right"></button>
                         </div>
                     </div>
-                    <div class="best-offer-section-products-cards">
+                    <section class="best-offer-products-cards-section">
                         <div class="best-offer-section-card">
                             <div class="best-offer-section-card__img best-offer-section-card__img-one">
                                 <div class="best-offer-section-card__img_up">
@@ -234,8 +234,8 @@
                                 <button class="best-offer-section-card-add-cart__btn"></button>
                             </div>
                         </div>
-                    </div>
-                  
+                    </section>
+                  <section class="best-offer-fieldset-section"></section>
                 </section>
             </div>
         </div>
