Добавлена секция с checkbox

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <main>
         <div class="wrapper">
             <div class="container">
-                 <!-- Секция - Популярное -->
+                <!-- Секция - Популярное -->
                 <section class="popular-section">
                     <h2 class="popular-section-title">Популярное</h2>
                     <div class="popular-section-left">
@@ -140,13 +140,20 @@
                                     <div class="best-offer-section-card-sale">-10%</div>
                                 </div>
                                 <div class="best-offer-section-card__img_down">
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_green"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_blue"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_green"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_select"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_green"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_blue"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_green"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_select"></button>
                                 </div>
                             </div>
                             <p class="best-offer-section-card-descr">Вертикальные жалюзи <br>«Lorem»</p>
@@ -165,12 +172,16 @@
                                     <div class="best-offer-section-card-sale">-10%</div>
                                 </div>
                                 <div class="best-offer-section-card__img_down">
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_green"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_green"></button>
                                 </div>
                             </div>
-                            <p class="best-offer-section-card-descr">Вертикальные жалюзи <br> «Lorem». Длинное название в три строчки</p>
+                            <p class="best-offer-section-card-descr">Вертикальные жалюзи <br> «Lorem». Длинное название
+                                в три строчки</p>
                             <div class="best-offer-section-card-price">
                                 <p class="best-offer-section-card-price-new">от <span>1200₽</span></p>
                                 <del class="best-offer-section-card-price-old test">1000₽</del>
@@ -191,10 +202,14 @@
                                     <div class="best-offer-section-card-sale">-10%</div>
                                 </div>
                                 <div class="best-offer-section-card__img_down">
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_blue"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_green"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_blue"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_green"></button>
                                 </div>
                             </div>
                             <p class="best-offer-section-card-descr">Вертикальные жалюзи <br>«Lorem»</p>
@@ -218,10 +233,14 @@
                                     <div class="best-offer-section-card-sale">-10%</div>
                                 </div>
                                 <div class="best-offer-section-card__img_down">
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_blue"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
-                                    <button class="best-offer-section-card__color best-offer-section-card__color_green"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_grey"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_blue"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_gold"></button>
+                                    <button
+                                        class="best-offer-section-card__color best-offer-section-card__color_green"></button>
                                 </div>
                             </div>
                             <p class="best-offer-section-card-descr">Короткое название</p>
@@ -235,7 +254,79 @@
                             </div>
                         </div>
                     </section>
-                  <section class="best-offer-fieldset-section"></section>
+                    <section class="best-offer-fieldset-section">
+                        <fieldset class="best-offer-fieldset">
+                            <legend class="best-offer-fieldset-legend"> Ваш помощник в выборе солнцезащиты </legend>
+                            <h2 class="best-offer-fieldset-title">Для какого помещения выбираете Lorem?</h2>
+                            <div class="best-offer-fieldset-pages">
+                                <button class="best-offer-fieldset-pages__btn">1</button>
+                                <div class="best-offer-fieldset-pages__dash">—</div>
+                                <button class="best-offer-fieldset-pages__btn">2</button>
+                                <div class="best-offer-fieldset-pages__dash">—</div>
+                                <button class="best-offer-fieldset-pages__btn">3</button>
+                            </div>
+                            <div class="best-offer-fieldset-checkbox">
+                                <div class="best-offer-fieldset-checkbox-list">
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Веранда, терраса, уличное
+                                            пространство</label>
+                                    </div>
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Офис</label>
+                                    </div>
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Учебное или мед.
+                                            учреждение</label>
+                                    </div>
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Помещение с
+                                            проектором</label>
+                                    </div>
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Стеклянные
+                                            переговорные</label>
+                                    </div>
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Помещение с панорамными
+                                            окнами</label>
+                                    </div>
+                                </div>
+                                <div class="best-offer-fieldset-checkbox-list">
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Помещение с мансардными
+                                            окнами</label>
+                                    </div>
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Кухня, столовая</label>
+                                    </div>
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Детская</label>
+                                    </div>
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Спальня</label>
+                                    </div>
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Балкон</label>
+                                    </div>
+                                    <div class="best-offer-fieldset-checkbox-item">
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label class="best-offer-fieldset-checkbox__label">Зимний сад</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </section>
                 </section>
             </div>
         </div>
