--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                             <div class="best-offer-fieldset-checkbox">
                                 <div class="best-offer-fieldset-checkbox-list">
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch" checked></span>
                                         <label class="best-offer-fieldset-checkbox__label">Веранда, терраса, уличное
                                             пространство</label>
                                     </div>
@@ -325,15 +325,63 @@
                                     </div>
                                 </div>
                             </div>
+                            <button class="best-offer-fieldset-next__btn">Далее</button>
                         </fieldset>
                     </section>
                 </section>
             </div>
         </div>
     </main>
+    <!-- footer -->
     <footer>
-        <div class="wrapper">
-
+        <div class="wrapper footer">
+            <div class="footer-up">
+                <div class="footer-up-lorem-block">
+                    <a href="#" class="footer-up-block-links">Lorem</a>
+                    <a href="#" class="footer-up-block-links">Lorem</a>
+                    <a href="#" class="footer-up-block-links">Lorem</a>
+                    <a href="#" class="footer-up-block-links">Lorem</a>
+                    <a href="#" class="footer-up-block-links">Lorem</a>
+                    <a href="#" class="footer-up-block-links">Lorem</a>
+                </div>
+                <div class="footer-up-contacts-block">
+                    <a href="#" class="footer-up-block-links">О компании</a>
+                    <a href="#" class="footer-up-block-links">Отзывы</a>
+                    <a href="#" class="footer-up-block-links">Блог</a>
+                    <a href="#" class="footer-up-block-links">Контакты</a>
+                    <a href="#" class="footer-up-block-links">Коммерческим покупателям</a>
+                </div>
+                <div class="footer-up-logo-block">
+                    <p class="footer-up-logo-block-descr-logo">LOGO</p>
+                    <p class="footer-up-block-links footer-up-logo-block-descr">Москва и МО</p>
+                    <p class="footer-up-block-links footer-up-logo-block-descr">Режим работы: <br> ежедневно с 9:00 до 21:00 </p>
+                    <div class="footer-up-logo-block-descr-numbers">
+                        <p class="footer-up-logo-block-descr-numb">8 955 545 23 81</p>
+                        <p class="footer-up-logo-block-descr-numb">8 955 515 21 81</p> 
+                    </div>
+                </div>
+                <div class="footer-up-calk-block">
+                    <button class="footer-up-calk">калькулятор</button>
+                    <p class="footer-up-calk-block-email">E-mail: info@lorem.ru</p>
+                    <div class="footer-up-calk-block-networks">
+                        <a href="#" class="footer-up-calk-block-networks-links">FB</a>
+                        <a href="#" class="footer-up-calk-block-networks-links">OK</a>
+                        <a href="#" class="footer-up-calk-block-networks-links">VK</a>
+                        <a href="#" class="footer-up-calk-block-networks-links">TW</a>
+                        <a href="#" class="footer-up-calk-block-networks-links">IN</a>
+                        <a href="#" class="footer-up-calk-block-networks-links">YT</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-down">
+                <p class="footer-down-descr">@ 2020 Lorem</p>
+                <div class="footer-down-descr-links">
+                    <a href="#" class="footer-down-descr">Правила использования cookie</a>
+                    <a href="#" class="footer-down-descr">Пользовательское соглашение</a>
+                    <a href="#" class="footer-down-descr">Карта сайта</a>
+                </div>
+                <p class="footer-down-descr">Разработка — Lorem</p>
+            </div>
         </div>
     </footer>
 </body>
